--- a/app/templates/request/hk_identity_type_details.hbs
+++ b/app/templates/request/hk_identity_type_details.hbs
@@ -8,7 +8,7 @@
   <div class="small-12 columns">
     {{#form-control}}
       <div class="small-3 medium-3 large-2 columns p12">
-        <label> P12 </label>
+        <label id="id-initials"> P12 </label>
       </div>
       <div class="columns small-3 medium-3 large-2">
           {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber minlength="4" maxlength="4" placeholder="XXXX" required='true'}}
