--- a/app/templates/request/rbcl_identity_type_details.hbs
+++ b/app/templates/request/rbcl_identity_type_details.hbs
@@ -8,7 +8,7 @@
   {{#form-control}}
     <div class="small-12 columns">
       <div class="small-3 medium-3 large-2 columns p12">
-        <label> RBCL </label>
+        <label id="id-initials"> RBCL </label>
       </div>
       <div class="columns small-3 medium-2 large-2">
           {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber minlength="4" maxlength="4" placeholder="XXXX" required='true'}}
