fix appointment page validation

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,4 +35,5 @@
 @import "templates/appointment_details";
 @import "components/logo-banner";
 @import "components/add-request";
+@import "components/select-appointment-date";
 @import "ember_offline";
