--- a/app/styles/templates/_appointment_details.scss
+++ b/app/styles/templates/_appointment_details.scss
@@ -2,11 +2,16 @@
   .calender_icon {
     margin-right: 1.1rem;
     font-size: 1.1rem;
-    margin-top: -2.68rem;
-    float: right;
     display: inline;
+    color: #FFA3A3;
+    float: right;
+    margin-top: -2.68rem;
   }
   i.calendar_icon:before {
     position: absolute;
+  }
+  .checkbox.form__control--error{
+    border-color: #f34d4f;
+    background: #fddbdc;
   }
 }
