--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -28,7 +28,7 @@
         <div class="section_subtitle small">
           <div><i class="fa fa-check"></i> {{ t "home.visit.subtitle" }} </div>
         </div>
-        {{partial 'book_appointment_button'}}
+        {{book-appointment}}
       </div>
     </div>
 
@@ -101,7 +101,7 @@
           </div>
           <div>
             <div class="small">{{ t "home.tap_button" }}</div>
-            {{partial 'book_appointment_button'}}
+            {{book-appointment}}
           </div>
         </div>
       </div>
