--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -16,12 +16,7 @@
             {{/link-to}}
           </div>
           <div class="columns button-container small-6">
-            {{#link-to "request_purpose"}}
-              <div class="button light">
-                <i class="fa fa-calendar"></i>
-                {{ t "home.visit.action" }}
-              </div>
-            {{/link-to}}
+            {{book-appointment}}
           </div>
         </div>
         <ul class="list list-items">
