Floating arrow for scrolling to bottom

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,5 +1,7 @@
+{{#if isMobileApp}}
+  {{ember-scroll-to-bottom}}
+{{/if}}
 <div class="home_page {{if showCartDetailSidebar "shift_left" "" }}">
-
   <div class="scroller">
 
     <!-- Introduction -->
