--- a/app/templates/components/add-request.hbs
+++ b/app/templates/components/add-request.hbs
@@ -4,11 +4,11 @@
         <div class="small-12 columns add-request" >
           <div class="small-7 columns" {{action "searchPackageType" request.id order.id}}>
             <label> {{t 'order.goods_details.type_label'}} </label>
-              {{input type="text" name="packageTypeDescription" value=packageTypeName pattern=".*\S.*" id=(concat 'packageTypeDescription' request.id) required='true'}}
+              {{input type="text" name="packageTypeDescription" value=packageTypeName pattern=".*\S.*" id=(concat 'packageTypeDescription' request.id) classNames="select-goods" required='true'}}
           </div>
           <div class="small-3 columns">
             <label> {{t 'order.goods_details.quantity_label'}} </label>
-            {{numeric-input id=(concat 'quantity' request.id) name="qty" value=request.quantity maxlength="8" required='true' pattern="\d{1,8}"}}
+            {{numeric-input id=(concat 'quantity' request.id) name="qty" value=request.quantity maxlength="8" required='true' pattern="\d{1,8}" classNames="add-quantity"}}
           </div>
           <div class='small-2 columns icon-center remove-request remove-request-click'>
             <i class='fa fa-times-circle fa-2x icon' {{action "removeRequest" request.id on="click"}}></i>
@@ -26,7 +26,7 @@
     <div class="small-12 columns">
       <div class="small-10 columns req-description">
         <label> {{t 'order.goods_details.description_details_label'}} </label>
-        {{input type="text" id=(concat 'description' request.id) name="otherDetails" value=request.description classNames="number_input center_align_placeholder"}}
+        {{input type="text" id=(concat 'description' request.id) name="otherDetails" value=request.description classNames="number_input center_align_placeholder add-description"}}
       </div>
     </div>
   </div>
