--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -28,7 +28,7 @@
     @media #{$medium-only} {
       float: left !important;
       width: 100%;
-      margin-left: 0rem !important;
+      margin-left: 0rem;
     }
   }
 
@@ -131,8 +131,10 @@
     .people-count-label{
       margin-top: 1rem !important;
       margin-bottom: 0.5rem;
-      width: 94%;
-      margin-left: 0.4rem;
+      @media #{$small-only}{
+        width: 94%;
+        margin-left: .4rem;
+      }
     }
     .people-count-input{
       input {
@@ -155,14 +157,18 @@
     .description {
       margin-top: 1rem !important;
       margin-bottom: 0.2rem;
-      width: 94%;
-      margin-left: .4rem;
+      @media #{$small-only}{
+        width: 94%;
+        margin-left: .4rem;
+      }
     }
     .reason-of-need{
       font-size: 0.8rem;
       margin-bottom: 0.5rem;
-      width: 94%;
-      margin-left: .4rem;
+      @media #{$small-only}{
+        width: 94%;
+        margin-left: .4rem;
+      }
     }
     textarea {
       @media #{$small-only}{
