--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,4 @@
+@import "scroll-to-bottom";
 @import "mixins/alignment";
 @import "settings";
 @import "colors";
@@ -23,6 +24,7 @@
 @import "account_details";
 @import "request_purpose";
 @import "order_block";
+@import "scroll_icon_settings";
 
 @import "templates/home";
 @import "templates/loading";
