--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -1,3 +1,6 @@
+{{#if isMobileApp}}
+  {{scroll-to-bottom customClass="account-detail-info-scroll-arrow"}}
+{{/if}}
 <div class="row checkout_pages">
   <div class="small-12 medium-9 large-9 columns">
     <section class="main-section new-user-section ui login_page">
