--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -1,4 +1,8 @@
-<div class="row">
+{{#if isMobileApp}}
+  {{scroll-to-bottom customClass="goods-detail-info-scroll-arrow"}}
+{{/if}}
+
+<div class="row goods_detail_info">
   <div class="large-12 columns medium-12 small-12">
     <div class="row checkout_pages">
       <div class="small-12 columns">
