--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -1,3 +1,6 @@
+{{!-- {{#if isMobileApp}}
+  {{scroll-to-bottom}}
+{{/if}}--}}
 <div class="row">
   <div class="large-12 columns medium-12 small-12">
     <div class="row checkout_pages">
