--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="large-12 columns medium-12 small-12">
+  <div class="large-8 columns large-offset-2 medium-offset-2 medium-8 small-12">
     <div class="row checkout_pages">
       <div class="small-12">
         <section class="main-section new-user-section ui login_page">
@@ -13,7 +13,7 @@
           </nav>
         </section>
 
-        
+
           {{#validate-appointment}}
             {{#validatable-form onSubmit=(action 'saveTransportDetails') as |form|}}
               <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 columns appointment-date">
@@ -28,7 +28,7 @@
                     value="self"
                     selection=selectedId
                     required='true'}}
-                    <label class="radio-button-text align-text" for="self">
+                    <label class="radio-button-text align-text self_vehicle" for="self">
                       {{t 'order.appointment.self_vehicle'}}
                     </label>
                   </div>
@@ -40,7 +40,7 @@
                     value="ggv"
                     selection=selectedId
                     required='true'}}
-                    <label class="radio-button-text align-text" for="ggv">
+                    <label class="radio-button-text align-text hire_vehicle" for="ggv">
                       {{t 'order.appointment.hire_vehicle'}}
                     </label>
                   </div>
@@ -58,7 +58,7 @@
                   <div class='checkbox custom_radio_buttons small-12 columns purpose col-width-appointment confirmation-checkbox'>
                     {{input type="checkbox" name="labor" checked=false id='4' required=true}}
                     <label class="radio-button-text  align-text" for='4'>
-                    <span> {{t 'order.appointment.labor_confirmation'}} </span>
+                    <span class="labor_confirmation"> {{t 'order.appointment.labor_confirmation'}} </span>
                     </label>
                   </div>
                 </div>
@@ -92,14 +92,14 @@
                   <div class="row time_inputs id-type-radio-input time-slots" >
                     {{#each timeSlots as |time|}}
                       {{#unless time.isClosed}}
-                          <div class="custom_radio_buttons small-4 large-3 medium-3 columns end">
+                          <div class="custom_radio_buttons small-4 large-4 medium-4 columns end">
                             {{radio-button
                             name="selectTime"
                             id=time.timestamp
                             value=time.timestamp
                             selection=selectedTimeId
                             required='true'}}
-                            <label class="radio-button-text align-text" for={{time.timestamp}}>
+                            <label class="radio-button-text align-text time_slots" for={{time.timestamp}}>
                               {{display-time time.timestamp "HH:mm"}}
                             </label>
                           </div>
