--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="large-12 columns medium-12 small-12">
+  <div class="large-8 columns large-offset-2 medium-offset-2 medium-8 small-12">
     <div class="row checkout_pages">
       <div class="small-12 columns">
         <section class=" login_page">
