move text to translation file

--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -43,7 +43,7 @@
             <br>
             <div class="row">
               <div class="small-11 columns">
-                {{#if hasNoGcRequests}}<p align="center" class="no-gc-req-error">Atleast one Item is required.</p>{{/if}}
+                {{#if hasNoGcRequests}}<p align="center" class="no-gc-req-error">{{t "order.goods_details.no_goods_error"}}</p>{{/if}}
                 <button {{action 'submit' target=form}} disabled={{hasNoGcRequests}} class="button expand expand_button">{{t "continue"}}</button>
               </div>
               <div class='small-1 columns'>&nbsp;</div>
