--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -10,13 +10,13 @@
           <div class="columns button-container small-6">
             {{#link-to "browse"}}
               <div class="button light">
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 {{t 'home.order_goods.action'}}
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
               </div>
             {{/link-to}}
           </div>
           <div class="columns button-container small-6">
-            {{book-appointment}}
+            {{book-appointment buttonStyle='light'}}
           </div>
         </div>
         <ul class="list list-items">
