Time slot not selected fix

--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -185,6 +185,6 @@
   text-transform: capitalize !important;
 }
 
-.no-gc-req-error{
+.no-gc-req-error, .no-time-slot-selected-error{
   color: #ee4f4b;
 }
