--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -106,6 +106,11 @@
                       {{/unless}}
                     {{/each}}
                   </div>
+                  {{#if timeSlotNotSelected}}
+                    <p align="center" class="no-time-slot-selected-error">
+                      {{t "order.goods_details.no_time_slot_selected_error"}}
+                    </p>
+                  {{/if}}
                 {{/if}}
                 <div class="row">
                   <div class="small-12 columns">
