--- a/app/templates/request/rbcl_identity_type_details.hbs
+++ b/app/templates/request/rbcl_identity_type_details.hbs
@@ -1,5 +1,5 @@
 <div class="small-12 columns type-of-id-text">
-  {{t "order.client_information.rbcl.title"}} 
+  {{t "order.client_information.rbcl.title"}}
 </div>
 <div class="small-12 columns id-confidential-text">
   {{t "order.client_information.rbcl.sub_title"}} <br> <br>
@@ -11,13 +11,13 @@
         <label> RBCL </label>
       </div>
       <div class="columns small-3 medium-2 large-2">
-          {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber maxlength="4" placeholder="XXXX" required='true'}}
+          {{numeric-input name="hk_id" id="hk-id-number" value=identityNumber minlength="4" maxlength="4" placeholder="XXXX" required='true'}}
       </div>
       <div class="columns small-6 medium-6 large-8 x-with-brackets">
         / XX
       </div>
       <div class="small-12 columns input-error warning_empty">
-        <div class='input-error'> {{t "order.numbers_warning"}} </div>  
+        <div class='input-error'> {{t "order.numbers_warning"}} </div>
       </div>
     </div>
   {{/form-control}}
