add ids to confirms buttons

--- a/app/templates/order/client_information.hbs
+++ b/app/templates/order/client_information.hbs
@@ -122,7 +122,7 @@
 
               <div class="row">
                 <div class="small-12 columns">
-                  <a {{action 'submit' target=form}} class="button expand"> {{t 'continue'}} </a>
+                  <a {{action 'submit' target=form}} id="client-info-submit" class="button expand"> {{t 'continue'}} </a>
                 </div>
               </div>
             </div>
