--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -69,7 +69,7 @@
                 </div>
                 <div class="row">
                   <div class="small-12 columns">
-                    <a {{action 'submit' target=form}} class="button expand"> {{t 'continue'}} </a>
+                    <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'continue'}} </a>
                   </div>
                 </div>
               {{/validatable-form}}
