--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -77,7 +77,9 @@
           {{/link-to}}
         </div>
       </div>
-      <div class="line">{{t "application.sidebar.version" }} {{ appVersion }}</div>
+      {{#if appVersion}}
+        <div class="line">{{t "application.sidebar.version" }} {{ appVersion }}</div>
+      {{/if}}
     </li>
   </ul>
 </aside>
