--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -77,7 +77,7 @@
           {{/link-to}}
         </div>
       </div>
-      {{#if appVersion}}
+      {{#if isMobileApp}}
         <div class="line">{{t "application.sidebar.version" }} {{ appVersion }}</div>
       {{/if}}
     </li>
