--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -1,4 +1,4 @@
-<nav class="tab-bar show-for-small">
+<nav class="tab-bar show-for-small" data-topbar>
   <section class="left-small">
     <a class="left-off-canvas-toggle menu-icon" href="#">
       <span></span>
