--- a/app/templates/_navigation_list.hbs
+++ b/app/templates/_navigation_list.hbs
@@ -1,4 +1,4 @@
-<nav class="tab-bar">
+<nav class="tab-bar" data-topbar>
   <section class="tab-bar-section">
     <h1 class="title">{{t "order.goodcity_order"}}</h1>
   </section>
