--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -3,7 +3,7 @@
     <div class="small-12 medium-9 large-6 columns">
       <section class="main-section new-user-section ui login_page">
 
-        <nav class="tab-bar">
+        <nav class="tab-bar" data-topbar>
           <section class="middle tab-bar-section">
             <h1 class="title">{{t "order.login"}}/{{t "order.register"}}</h1>
           </section>
