--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -1,4 +1,4 @@
-<nav class="tab-bar hide-for-small">
+<nav class="tab-bar hide-for-small" data-topbar>
   <section class='main-section'>
     <h1 class="title">{{t "browse.title"}}</h1>
   </section>
