--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -6,7 +6,7 @@
     <div class="row checkout_pages">
       <div class="small-12 columns">
         <section class=" login_page">
-          <nav class="tab-bar">
+          <nav class="tab-bar" data-topbar>
             <section class="left-large">
               {{fa-icon "angle-left"}}
               {{#if fromClientInformation}}
