--- a/app/templates/order/summary_tabs/booking.hbs
+++ b/app/templates/order/summary_tabs/booking.hbs
@@ -2,7 +2,23 @@
 
   {{!-- FIRST SECTION: ORDER INFO/STATUS --}}
   <section class="details">
-
+    <div class="row">
+      <div class="small-6 medium-6 large-6 columns section-title">
+        {{ t 'my_orders.details.beneficiary.appointment_details' }}
+      </div>
+      {{#if selectedOrder.isEditAllowed}}
+        <div class="small-3 medium-3 large-3 columns">
+          <a {{action "cancelBookingPopUp" "appointment_details"}} class="button expand secondary cancel-booking">
+            {{t 'cancel'}}
+          </a>
+        </div>
+        <div class="small-3 medium-3 large-3 columns">
+           <a {{action "redirectToEdit" "appointment_details"}} class="button expand edit-appointment-details">
+            {{t 'edit'}}
+          </a>
+        </div>
+      {{/if}}
+    </div>
     {{!-- ORDER TYPE --}}
     <div class="detail-row row">
       <div class="data-type">{{ t "my_orders.details.type" }}</div>
@@ -44,8 +60,17 @@
   {{!-- SECOND SECTION: BENEFICIARY  --}}
   {{#if selectedOrder.beneficiary}}
     <section class="details beneficiary">
-      <div class="section-title">
-        {{ t 'my_orders.details.beneficiary.client_information' }}
+      <div class="row">
+        <div class="small-9 medium-9 large-9 columns section-title">
+          {{ t 'my_orders.details.beneficiary.client_information' }}
+        </div>
+        {{#if selectedOrder.isEditAllowed}}
+          <div class="small-3 medium-3 large-3 columns section-title">
+            <a {{action "redirectToEdit" "client_information"}} class="button expand edit-appointment-details">
+              {{t 'edit'}}
+            </a>
+          </div>
+        {{/if}}
       </div>
       {{!-- ID TYPE --}}
       <div class="detail-row row">
@@ -76,8 +101,17 @@
 
   {{!-- THIRD SECTION: REQUEST INFO --}}
   <section class="details purpose">
-    <div class="section-title">
-      {{ t 'my_orders.details.request.request_purpose' }}
+    <div class="row">
+      <div class="small-9 medium-9 large-9 columns section-title">
+        {{ t 'my_orders.details.request.request_purpose' }}
+      </div>
+      {{#if selectedOrder.isEditAllowed}}
+        <div class="small-3 medium-3 large-3 columns section-title">
+          <a {{action "editRequestPurpose"}} class="button expand edit-appointment-details">
+            {{t 'edit'}}
+          </a>
+        </div>
+      {{/if}}
     </div>
     {{!-- Purpose --}}
     <div class="detail-row row">
