--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -9,7 +9,12 @@
             <section class="main-section new-user-section ui login_page">
               <nav class="tab-bar" data-topbar>
                 <section class="left-large">
-                  {{fa-icon "angle-left"}} {{#link-to "home" classNames="back"}}{{t "back"}}{{/link-to}}
+                  {{fa-icon "angle-left"}}
+                  {{#if (is-equal previousRouteName "my_orders")}}
+                    {{#link-to 'my_orders' classNames="back"}}{{t "back"}}{{/link-to}}
+                  {{else}}
+                    {{#link-to "home" classNames="back"}}{{t "back"}}{{/link-to}}
+                  {{/if}}
                 </section>
                  <section class="middle tab-bar-section">
                   <h1 class="title"> {{t 'order.request_purpose.title'}} </h1>
@@ -71,9 +76,26 @@
                   {{/form-control}}
                 </div>
                 <div class="row">
-                  <div class="small-12 columns">
-                    <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'continue'}} </a>
-                  </div>
+                  {{#if isEditing}}
+                    <div class="small-6 medium-6 large-6 columns">
+                      <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'save_changes'}} </a>
+                    </div>
+                    <div class="small-6 medium-6 large-6 columns">
+                      {{#if (is-equal previousRouteName "my_orders")}}
+                        {{#link-to 'my_orders' classNames="button expand request"}}
+                          {{t 'discard_changes'}}
+                        {{/link-to}}
+                      {{else}}
+                        {{#link-to 'home' classNames="button expand request"}}
+                          {{t 'discard_changes'}}
+                        {{/link-to}}
+                      {{/if}}
+                    </div>
+                  {{else}}
+                    <div class="small-12 columns">
+                      <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'continue'}} </a>
+                    </div>
+                  {{/if}}
                 </div>
               {{/validatable-form}}
             </section>
