add district to order

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -14,10 +14,12 @@
   }
 }
 
-select {
-  width: 10rem;
-  @media #{$small-only} {
-    max-width: 7rem;
+.package-category{
+  select {
+    width: 10rem;
+    @media #{$small-only} {
+      max-width: 7rem;
+    }
   }
 }
 
