--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -30,10 +30,23 @@
     </div>
 </div>
 
-{{#message-box btn1Text=(t "not_now") btn2Text=(t "cancel_booking.title") btn2Callback=(action "cancelOrder") isVisible=showCancelBookingPopUp classNames="popupOverlay designate-form"}}
+{{#message-box  isVisible=showCancelBookingPopUp classNames="popupOverlay cancel-appointment"}}
 
     <p class="cancel-booking-warning">{{t "cancel_booking.cancel_booking_warning"}}</p>
     <p>{{t "cancel_booking.cancel_booking_info"}}</p>
     <p>{{t "cancel_booking.cancel_booking_reason_title"}}</p>
+    {{auto-resize-textarea data-autoresize=true name="cancellation-reason" required="required" pattern=".*\S.*" id="appointment-cancellation-reason"}}
 
+    <div class="row cancel-appointment-buttons">
+      <div class="small-6 medium-6 large-6 columns">
+        <a {{action 'removePopUp'}} class="button expand">
+          {{t 'not_now'}}
+        </a>
+      </div>
+      <div class="small-6 medium-6 large-6 columns">
+        <a {{action 'cancelOrder'}} class="button expand">
+          {{t 'cancel_booking.title'}}
+        </a>
+      </div>
+    </div>
 {{/message-box}}
