Revert "GCW-2242-unresponsive-menu-icon"
This reverts commit c2da2150dc4a10e823220ce98b721ece4ccbe165.

--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -1,4 +1,4 @@
-<nav class="tab-bar hide-for-small" data-topbar>
+<nav class="tab-bar hide-for-small">
   <section class='main-section'>
     <h1 class="title">{{t "browse.title"}}</h1>
   </section>
