--- a/app/templates/order/appointment_details.hbs
+++ b/app/templates/order/appointment_details.hbs
@@ -7,7 +7,7 @@
     <div class="row checkout_pages">
       <div class="small-12">
         <section class="main-section new-user-section ui login_page">
-          <nav class="tab-bar" data-topbar>
+          <nav class="tab-bar">
             <section class="left-large">
               {{fa-icon "angle-left"}} {{#link-to 'order.goods_details' order.id classNames="back"}}{{t "back"}}{{/link-to}}
             </section>
