--- a/app/templates/package_category.hbs
+++ b/app/templates/package_category.hbs
@@ -1,4 +1,4 @@
-<nav class="tab-bar category_page" data-topbar>
+<nav class="tab-bar category_page">
   <section class='main-section ui'>
     <h1 class="title hide-for-small">{{model.name}}</h1>
 
