--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -7,7 +7,7 @@
       <div class="small-12 columns">
         <div class="row">
           <section class="main-section new-user-section ui login_page">
-            <nav class="tab-bar" data-topbar>
+            <nav class="tab-bar">
               <section class="left-large">
                 {{#link-to "authenticate" classNames="back"}}{{fa-icon "angle-left"}} {{t "back"}}{{/link-to}}
               </section>
