--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -1,7 +1,7 @@
-<nav class="tab-bar item-controls show-for-small tab-bar-placeholder" data-topbar>
+<nav class="tab-bar item-controls show-for-small tab-bar-placeholder">
 </nav>
 
-<nav class="tab-bar item-controls" data-topbar>
+<nav class="tab-bar item-controls">
   <section class='main-section'>
     <div class="row">
       <div class="large-8 medium-8 small-12 columns hide-for-small package_catogory_header">
