--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -2,7 +2,7 @@
   <div class="small-12 medium-9 large-6 columns">
     <section class="main-section new-user-section ui login_page">
 
-      <nav class="tab-bar" data-topbar>
+      <nav class="tab-bar">
         <section class="left-large">
           {{#link-to "browse" classNames="back"}}{{fa-icon "angle-left"}} {{t "back"}}{{/link-to}}
         </section>
