--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -3,7 +3,7 @@
     <div class="row checkout_pages">
       <div class="small-12 columns">
         <section class="main-section new-user-section ui login_page large-10 large-offset-1 medium-10 medium-offset-1 small-12">
-          <nav class="tab-bar" data-topbar>
+          <nav class="tab-bar">
             <section class="left-large">
               {{fa-icon "angle-left"}} {{#link-to "order.appointment_details" order.id classNames="back"}}{{t "back"}}{{/link-to}}
             </section>
