--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -7,7 +7,7 @@
         <div class="small-12 columns">
           <div class="row">
             <section class="main-section new-user-section ui login_page">
-              <nav class="tab-bar" data-topbar>
+              <nav class="tab-bar">
                 <section class="left-large">
                   {{fa-icon "angle-left"}} {{#link-to "home" classNames="back"}}{{t "back"}}{{/link-to}}
                 </section>
