--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="row checkout_pages">
     <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
-      <section class="main-section new-user-section ui login_page">
+      <section class="main-section new-user-section ui login_page book_appointment_headers">
         <nav class="tab-bar">
           <section class="middle tab-bar-section">
             <h1 class="title"> {{t "order.booking_success.success"}} </h1>
@@ -9,7 +9,7 @@
         </nav>
       </section>
 
-      <section class="main-section client-information large-10 medium-10 large-offset-1 medium-offset-1">
+      <section class="main-section client-information large-10 medium-10 small-10 small-offset-1 large-offset-1 medium-offset-1">
         <div class="small-12 columns type-of-id-text">
           {{t "order.booking_success.reference_number"}}
         </div>
