--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
+  <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12 book">
     <div class="row checkout_pages">
       <div class="small-12 columns">
-        <section class="main-section new-user-section ui login_page large-10 large-offset-1 medium-10 medium-offset-1 small-12">
+        <section class="main-section new-user-section ui login_page large-10 large-offset-1 medium-10 medium-offset-1">
           <nav class="tab-bar">
-            <section class="left-large">
+            <section class="left-large book_appointment_headers">
               {{fa-icon "angle-left"}} {{#link-to "order.appointment_details" order.id classNames="back"}}{{t "back"}}{{/link-to}}
             </section>
              <section class="middle tab-bar-section">
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-    <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 small-12">
+    <section class="main-section client-information large-10 large-offset-1 medium-10 small-10 small-offset-1 medium-offset-1">
       <div class="small-12 columns type-of-id-text">
         {{t "order.confirm_booking.submit_order"}}
       </div>
