--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -5,7 +5,7 @@
   <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
     <div class="row checkout_pages">
       <div class="small-12 columns">
-        <section class=" login_page">
+        <section class="main-section new-user-section ui login_page">
           <nav class="tab-bar">
             <section class="left-large">
               {{fa-icon "angle-left"}}
