--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -23,100 +23,107 @@
             </section>
             <div class="row inner-section">
               <section class="main-section request-purpose medium-10 medium-offset-1 large-10 large-offset-1 small-10 small-offset-1 columns">
-              {{#validatable-form onSubmit=(action 'createOrderWithRequestPuropose') as |form|}}
-                <div class="small-12 columns">
-                  {{t 'order.request_purpose.purpose'}}
-                </div>
-                <div class="row time_inputs purpose" >
-                  <div class=" custom_radio_buttons small-12 columns purpose">
-                    {{radio-button
-                    name="selectReason"
-                    id="1"
-                    value="organisation"
-                    selection=selectedId
-                    required='true'}}
-                    <label class="radio-button-text for-organisation align-text" for="1">
-                      {{t 'order.request_purpose.for_organisation'}}
-                    </label>
+              {{#validate-appointment}}
+                {{#validatable-form onSubmit=(action 'createOrderWithRequestPuropose') as |form|}}
+                  <div class="small-12 columns">
+                    {{t 'order.request_purpose.purpose'}}
                   </div>
-                  <div class=" custom_radio_buttons small-12 columns purpose end">
+                  <div class="row time_inputs purpose" >
+                    <div class=" custom_radio_buttons small-12 columns purpose">
                       {{radio-button
                       name="selectReason"
-                      id="2"
-                      value="client"
+                      id="1"
+                      value="organisation"
                       selection=selectedId
                       required='true'}}
-                    <label class="radio-button-text for-client align-text" for="2">
-                      {{t 'order.request_purpose.for_client'}}
-                    </label>
+                      <label class="radio-button-text for-organisation align-text" for="1">
+                        {{t 'order.request_purpose.for_organisation'}}
+                      </label>
+                    </div>
+                    <div class=" custom_radio_buttons small-12 columns purpose end">
+                        {{radio-button
+                        name="selectReason"
+                        id="2"
+                        value="client"
+                        selection=selectedId
+                        required='true'}}
+                      <label class="radio-button-text for-client align-text" for="2">
+                        {{t 'order.request_purpose.for_client'}}
+                      </label>
+                    </div>
                   </div>
-                </div>
-                <div class="row people-count">
-                  <div class="small-12 columns people-count-label">
-                    {{t 'order.request_purpose.people_count_info'}}
+                  <div class="row people-count">
+                    <div class="small-12 columns people-count-label">
+                      {{t 'order.request_purpose.people_count_info'}}
+                    </div>
+                    <div class="people-count-input">
+                      {{#form-control}}
+                        {{input type='number' value=peopleCount required='true' id="people-count"}}
+                        <div class='input-error'> {{t 'order.request_purpose.people_count_warning'}} </div>
+                      {{/form-control}}
+                    </div>
                   </div>
-                  <div class="people-count-input">
-                    {{#form-control}}
-                      {{input type='number' value=peopleCount required='true' id="people-count"}}
-                      <div class='input-error'> {{t 'order.request_purpose.people_count_warning'}} </div>
-                    {{/form-control}}
-                  </div>
-                </div>
-                <div class="row district-select">
-                  <div class="large-12 small-12 medium-12 columns">
-                    <br />
-                    <label class="form-label">Where in Hong Kong will these goods be primarily used?</label>
-                    <p><small>This assists us with our reporting.</small></p>
+                  <div class="row district-select">
+                    <div class="large-12 small-12 medium-12 columns">
+                      <br />
+                      <div class="small-12 columns district-label">
+                        Where in Hong Kong will these goods be primarily used?
+                      </div>
+                      <div class="small-12 columns district-label-info">
+                        This assists us with our reporting.
+                      </div>
                       {{#form-control}}
                         {{select-list
                           content=districts
                           on-change=(action (mut selectedDistrict))
                           selectedValue=selectedDistrict
-                          placeHolderValue="----Please select District----"
+                          prompt="Select District"
                           value= selectedDistrict
                           selectArrow=true
                           required=true
-                          classNames='district-select'
+                          classNames='district-selector'
                           idNames='district-select-dropdown'}}
+                          <div class='input-error'>Please select District.</div>
                       {{/form-control}}
-                  </div>
-                </div>
-                <div class="row description-of-need">
-                  <div class="small-12 columns description">
-                    {{t 'order.request_purpose.need_description'}}
-                  </div>
-                  <div class="small-12 columns reason-of-need">
-                    {{t 'order.request_purpose.need_description_info'}}
-                  </div>
-                  {{#form-control}}
-                    <i class="fa fa-times-circle remove-text" aria-hidden="true" {{action "clearDescription"}}></i>
-                    {{auto-resize-textarea data-autoresize=true name="description" value=description required="required" pattern=".*\S.*" id="description"}}
-                    <div class='input-error'> {{t 'order.request_purpose.description_warning'}} </div>
-                  {{/form-control}}
-                </div>
-                <div class="row">
-                  {{#if isEditing}}
-                    <div class="small-6 medium-6 large-6 columns">
-                      <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'save_changes'}} </a>
                     </div>
-                    <div class="small-6 medium-6 large-6 columns">
-                      {{#if (is-equal previousRouteName "my_orders")}}
-                        {{#link-to 'my_orders' classNames="button expand request"}}
-                          {{t 'discard_changes'}}
-                        {{/link-to}}
-                      {{else}}
-                        {{#link-to 'home' classNames="button expand request"}}
-                          {{t 'discard_changes'}}
-                        {{/link-to}}
-                      {{/if}}
+                  </div>
+                  <div class="row description-of-need">
+                    <div class="small-12 columns description">
+                      {{t 'order.request_purpose.need_description'}}
                     </div>
-                  {{else}}
-                    <div class="small-12 columns">
-                      <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'continue'}} </a>
+                    <div class="small-12 columns reason-of-need">
+                      {{t 'order.request_purpose.need_description_info'}}
                     </div>
-                  {{/if}}
-                </div>
-              {{/validatable-form}}
+                    {{#form-control}}
+                      <i class="fa fa-times-circle remove-text" aria-hidden="true" {{action "clearDescription"}}></i>
+                      {{auto-resize-textarea data-autoresize=true name="description" value=description required="required" pattern=".*\S.*" id="description"}}
+                      <div class='input-error'> {{t 'order.request_purpose.description_warning'}} </div>
+                    {{/form-control}}
+                  </div>
+                  <div class="row">
+                    {{#if isEditing}}
+                      <div class="small-6 medium-6 large-6 columns">
+                        <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'save_changes'}} </a>
+                      </div>
+                      <div class="small-6 medium-6 large-6 columns">
+                        {{#if (is-equal previousRouteName "my_orders")}}
+                          {{#link-to 'my_orders' classNames="button expand request"}}
+                            {{t 'discard_changes'}}
+                          {{/link-to}}
+                        {{else}}
+                          {{#link-to 'home' classNames="button expand request"}}
+                            {{t 'discard_changes'}}
+                          {{/link-to}}
+                        {{/if}}
+                      </div>
+                    {{else}}
+                      <div class="small-12 columns">
+                        <a {{action 'submit' target=form}} class="button expand" id="request-submit"> {{t 'continue'}} </a>
+                      </div>
+                    {{/if}}
+                  </div>
+                {{/validatable-form}}
+              {{/validate-appointment}}
             </section>
             </div>
         </div>
