GCW-2244 Order confirmation screen

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,7 @@
 @import "request_purpose";
 @import "order_block";
 @import "scroll_icon_settings";
+@import "confirm_booking";
 
 @import "templates/home";
 @import "templates/loading";
