move code to npm package, and import that package

--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -23,9 +23,11 @@
             </section>
             <div class="row inner-section">
               <section class="main-section request-purpose medium-10 medium-offset-1 large-10 large-offset-1 small-10 small-offset-1 columns">
-              {{#validate-request-purpose
-                elementArray='["#people-count", "#description", ".district-selector select"]'
-              }}
+                {{validate-inputs
+                  elementCssIdentifiersArrayJson='["#people-count", "#description", ".district-selector select"]'
+                  errorClass='form__control--error'
+                  buttonId='#request-submit'
+                }}
                 {{#validatable-form onSubmit=(action 'createOrderWithRequestPurpose') as |form|}}
                   <div class="small-12 columns">
                     {{t 'order.request_purpose.purpose'}}
@@ -125,7 +127,6 @@
                     {{/if}}
                   </div>
                 {{/validatable-form}}
-              {{/validate-request-purpose}}
             </section>
             </div>
         </div>
