--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -71,23 +71,22 @@
                     <div class="large-12 small-12 medium-12 columns">
                       <br />
                       <div class="small-12 columns district-label">
-                        Where in Hong Kong will these goods be primarily used?
+                        {{t 'order.request_purpose.district_label'}}
                       </div>
                       <div class="small-12 columns district-label-info">
-                        This assists us with our reporting.
+                        {{t 'order.request_purpose.district-label-info'}}
                       </div>
                       {{#form-control}}
                         {{select-list
                           content=districts
                           on-change=(action (mut selectedDistrict))
                           selectedValue=selectedDistrict
-                          prompt="Select District"
+                          prompt=(t 'order.request_purpose.select_placeholder')
                           value= selectedDistrict
                           selectArrow=true
                           required=true
                           classNames='district-selector'
                           idNames='district-select-dropdown'}}
-                          <div class='input-error'>Please select District.</div>
                       {{/form-control}}
                     </div>
                   </div>
