--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -18,14 +18,14 @@
       </div>
     </div>
 
-    <section class="main-section client-information large-10 large-offset-1 medium-10 small-10 small-offset-1 medium-offset-1">
+    <section class="main-section client-information large-10 large-offset-1 medium-10 small-12 medium-offset-1">
       <div class="small-12 columns type-of-id-text">
         {{t "order.confirm_booking.info"}}
       </div>
       <br>
       <br>
       <div class="row">
-        <div class="small-12 columns">
+        <div class="small-10 small-offset-1 columns">
           <button id="submit_pin" class="button expand drop_off" {{action 'confirmBooking' order}}>
             {{t "order.confirm_booking.submit_order"}}
           </button>
@@ -52,7 +52,7 @@
 
     <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 small-12">
       <div class="row">
-        <div class="small-12 columns">
+        <div class="small-10 small-offset-1 columns">
           <button id="confirm_booking_button" class="button expand drop_off" {{action 'confirmBooking' order}}>
             {{t "order.confirm_booking.submit_order"}}
           </button>
